2009-09-26  Paul Smith  <psmith@gnu.org>

	* read.c (record_files): Free FILENAMES chain for implicit rules.

	* function.c (string_glob): Free NAME in the nameseq chain.

2009-09-25 Boris Kolpackov  <boris@codesynthesis.com>

	* implicit.c (pattern_search): Terminate early if we haven't
	found any rules to try (performance improvement).

2009-09-25 Boris Kolpackov  <boris@codesynthesis.com>

	* implicit.c (pattern_search): Merge three parallel arrays,
	TRYRULES, MATCHES, and CHECKED_LASTSLASH, into one array
	of struct TRYRULE. In the old version the latter two arrays
	had insufficient length.

2009-09-24  Paul Smith  <psmith@gnu.org>

	* implicit.c (pattern_search): Add back support for order-only
	prerequisites for secondary expansion implicit rules, that were
	accidentally dropped.  If we find a "|", enable order-only mode
	and set IGNORE_MTIME on all deps that are seen afterward.
	(pattern_search): Fix memory leaks: for intermediate files where
	we've already set the file variable and pattern variable sets, be
	sure to either save or free them as appropriate.

2009-09-23  Paul Smith  <psmith@gnu.org>

	Rework the way secondary expansion is stored, for efficiency.
	This changes secondary expansion so that ONLY WHEN we know we have
	a possibility of needing secondary expansion, do we defer the
	secondary expansion.  This means more parsing the deps but we use
	a lot less memory (due to the strcache).  Also, this fixes
	Savannah bug #18622.

	* read.c (eval): Don't parse the dep string here anymore.
	(record_files): Take the dep argument as an unparsed string.  If
	secondary expansion is enabled AND the prereq string has a '$' in
	it, then set NEED_2ND_EXPANSION and keep the entire string.
	Otherwise, parse the dep string here to construct the dep list
	with the names in the strcache.

	* misc.c (copy_dep_chain): For NEED_2ND_EXPANSION, we need to
	duplicate the name string (others are in the strcache).
